--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "dev:frontend": "npm run dev --workspace=frontend",
     "build": "npm run build --workspaces",
     "build:backend": "npm run build --workspace=backend",
-    "build:frontend": "npm run build --workspace=frontend"
+    "build:frontend": "npm run build --workspace=frontend",
+    "start": "npm run start --workspace=backend",
+    "heroku-postbuild": "npm run build:backend"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
