--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "dev:backend": "npm run dev --workspace=backend",
     "dev:frontend": "npm run dev --workspace=frontend",
-    "build": "npm run build --workspaces",
+    "build": "npm run build:frontend && npm run build:backend",
     "build:backend": "npm run build --workspace=backend",
     "build:frontend": "npm run build --workspace=frontend",
     "start": "npm run start --workspace=backend",
-    "heroku-postbuild": "npm run build:backend"
+    "heroku-postbuild": "npm run build"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
