--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,3 +3,12 @@ NODE_ENV=development
 
 # Database
 DATABASE_URL="postgresql://username:password@localhost:5432/buzzalicious?schema=public"
+
+# Google OAuth
+GOOGLE_CLIENT_ID="your-google-client-id"
+GOOGLE_CLIENT_SECRET="your-google-client-secret"
+GOOGLE_CALLBACK_URL="http://localhost:3001/auth/google/callback"
+SESSION_SECRET="your-random-session-secret-change-this-in-production"
+
+# Frontend URL (for CORS and redirects)
+FRONTEND_URL="http://localhost:3000"
