add ai services

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,3 +12,16 @@ SESSION_SECRET="your-random-session-secret-change-this-in-production"
 
 # Frontend URL (for CORS and redirects)
 FRONTEND_URL="http://localhost:3000"
+
+# AI Provider API Keys
+# OpenAI
+OPENAI_API_KEY="your-openai-api-key"
+
+# Azure OpenAI
+AZURE_OPENAI_API_KEY="your-azure-openai-api-key"
+AZURE_OPENAI_ENDPOINT="https://your-resource.openai.azure.com"
+AZURE_OPENAI_DEPLOYMENT="gpt-4"
+AZURE_OPENAI_API_VERSION="2024-02-15-preview"
+
+# Google Gemini
+GEMINI_API_KEY="your-gemini-api-key"
