--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,9 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "express-session": "^1.17.3",
-    "connect-pg-simple": "^9.0.1"
+    "connect-pg-simple": "^9.0.1",
+    "openai": "^4.24.1",
+    "@google/generative-ai": "^0.1.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
