--- a/backend/package.json
+++ b/backend/package.json
@@ -17,30 +17,30 @@
     "db:seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@google/generative-ai": "^0.24.1",
+    "@prisma/client": "^5.7.1",
+    "connect-pg-simple": "^9.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "@prisma/client": "^5.7.1",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "connect-pg-simple": "^9.0.1",
     "openai": "^4.24.1",
-    "@google/generative-ai": "^0.1.3"
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/express-session": "^1.17.10",
     "@types/node": "^20.10.6",
     "@types/passport": "^1.0.16",
     "@types/passport-google-oauth20": "^2.0.14",
-    "@types/express-session": "^1.17.10",
-    "typescript": "^5.3.3",
-    "ts-node": "^10.9.2",
-    "nodemon": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "eslint": "^8.56.0",
-    "prisma": "^5.7.1"
+    "nodemon": "^3.0.2",
+    "prisma": "^5.7.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
