post to twitter and save requests

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,6 +12,11 @@ SESSION_SECRET="your-random-session-secret-change-this-in-production"
 
 # Frontend URL (for CORS and redirects)
 FRONTEND_URL="http://localhost:3000"
+BACKEND_URL="http://localhost:3001"
+
+# Twitter API (for posting tweets)
+TWITTER_API_KEY="your-twitter-api-key"
+TWITTER_API_SECRET="your-twitter-api-secret"
 
 # AI Provider API Keys
 # OpenAI
